--- a/Selenium to prepare AENA page.Rmd
+++ b/Selenium to prepare AENA page.Rmd
@@ -358,7 +358,156 @@ day_of_month <- as.numeric(day(date_today))
 
 paste0("Start day is day ", day_of_month, " of the month")
 
+
+format_date_lub <- function(date_input) {
+  # Get named day of the week and month
+  day_of_week <- wday(date_input, label = TRUE, abbr = FALSE)
+  month <- month(date_input, label = TRUE, abbr = FALSE)
+
+  # Get the day with ordinal suffix
+  day <- day(date_input)
+  suffix <- str_sub(format(date_input, "%ord"), 2, 3)
+  day_with_suffix <- paste0(day, suffix)
+
+  # Get the year
+  year <- year(date_input)
+
+  # Combine the parts
+  formatted_date <- paste(day_of_week, month, day_with_suffix, year)
+
+  return(formatted_date)
+}
+
+lubridate::mdy(date_today)
+date_string <- format(date_today, "%m-%d-%Y")
+lubridate::mdy(date_string)
+format_date_lub(date_string)
+  
 ```
+
+
+Function to check if it's the last day of the month. 
+
+```{r}
+is_last_day_of_month <- function(date = Sys.Date()) {
+  current_date <- as.Date(date)
+  first_day_next_month <- seq(as.Date(format(current_date, "%Y-%m-01")), by = "1 month", length.out = 2)[2]
+  tomorrow <- current_date + 1
+  return(tomorrow == first_day_next_month)
+}
+
+is_last_day_of_month()
+```
+
+Manual coding then will function:
+a) base case: if day is non-last of month and it is before midday. Select the same day.
+
+```{r}
+# set the start date
+xpath_startcal_expression <- sprintf("//div[contains(@class, 'react-datepicker__day react-datepicker__day--') and text()='%0d']", as.numeric(day_of_month))
+
+# set the expression for tomorrow to use if you run in the afternoon.
+xpath_endcal_expression <- sprintf("//div[contains(@class, 'react-datepicker__day react-datepicker__day--') and text()='%0d']", as.numeric(day_of_month+1))
+
+cal_today_date <- remDr$findElement(using = "xpath", value = xpath_startcal_expression)
+cal_tomorrow_date <- remDr$findElement(using = "xpath", value = xpath_endcal_expression)
+
+find_cal_date$highlightElement()
+```
+
+Now run function to click either today or tomorrow based on when the 12 hour period ends:
+
+```{r}
+
+if (start_hr < 12 && !is_last_day_of_month(Sys.Date())) {
+  cal_today_date$clickElement()
+} else {
+  cal_tomorrow_date$clickElement()
+}
+
+```
+
+# press search to confirm all our options are input
+
+This updates the pages total number of flights upcoming. 
+
+```{r}
+search_button <- remDr$findElement(using = "xpath",
+                        value = "//div[@class=' container'] //section[@id='boton']/button[@value='Search']")
+
+search_button$clickElement()
+
+```
+
+Read how many flights are upcoming:
+
+```{r}
+number_flights_upcoming_selected <- 
+  remDr$findElement(using = "xpath",
+                    value = "//section[@id='infovuelos-info']//p[@class='h5 ligero']")
+
+# paste our search terms
+search_details <- number_flights_upcoming_selected$getElementText()
+search_details
+
+# extract the number of flights
+number_flights_searched <- as.numeric(substr(search_details, 1,4))
+number_flights_searched
+
+```
+
+The page returns 20 rows originally and when you click "see more" it adds 20 more. We specify the number of clicks based on our in scope searches and add a sleep in between. 
+This needs to be an exact number, because the "see more" button disappears once you read the end and we don't want to produce an error:
+
+If there are 95 flights, we would click 4 times. We start with 20, then search 4 more times to return up to 100 results. 
+
+If there are 1555 flights, we would need to click 77 times. We add a sleep in between to avoid being banned and overloading the website. 
+
+```{r}
+num_clicks <- ceiling((number_flights_searched-20)/ 20)
+paste("We will require",num_clicks,"clicks. This will take about 1 second per click")
+
+```
+
+```{r}
+# create function to click page a certain number of times
+multi_click_viewmore <- function(num_clicks) {
+  # loop for number of clicks and add sleep
+  for (i in 1:num_clicks) { 
+    # find button (consistent as page expands)
+    click_button <- remDr$findElement(using = "xpath", value = "//section[@id='infovuelos-tabla']//p[@class='btnIconText btn-see-more']//span[@class='icon icon-Mas_T']")
+    # select and sleep before next run
+    click_button$clickElement() 
+    Sys.sleep(1) # Sleep for 1 second
+  }
+}
+
+```
+
+Now we run this click more to expand our page to view all flights
+
+```{r}
+multi_click_viewmore(num_clicks = num_clicks)
+```
+
+
+### Count our upcoming flights and click down 
+
+Ensure we put sleeps in our page extension. 
+
+1/ get our number of flights
+```{r}
+
+```
+
+
+
+
+
+
+
+
+PROBABLY DEAD? 
 
 ```{r}
 
@@ -366,7 +515,13 @@ paste0("Start day is day ", day_of_month, " of the month")
 target_value <- n + 1
 
 # Construct dynamic XPath using sprintf()
-xpath_target <- sprintf("//div[contains(@class, 'react-datepicker__day') and text()='%d']", target_value)
+xpath_target <- sprintf("//div[contains(@class, 'react-datepicker__day') and text()='%d']", target_day)
+
+# the xpath can be manually created, because each day has it's own node with the day after the 'react-datepicker__day' class
+
+sprintf("//div")
+sprintf("//div[@class='valor minuto']//ul[@tabindex='4']/li[text()='%d']", as.numeric(end_min_input))
+
 
 # Find the element
 element_target <- remDr$findElement(using = "xpath", value = xpath_target)
@@ -387,11 +542,6 @@ date_codes <- unlist(strsplit(date_range_string, " - "))
 ```
 
 1/ If it is before midday, we want to select the same start and end date for our 12 hour block of flights
-
-```{r}
-# manual code for ccalendar wrapper
-//div[contains(@class, 'react-datepicker__month-container')]//div[contains(@class, 'react-datepicker__day') and text()='18']
-```
 
 ```{r}
 Sys.Date()
