--- a/Selenium to prepare AENA page.Rmd
+++ b/Selenium to prepare AENA page.Rmd
@@ -12,6 +12,20 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Instructions:
 This package will scrape information on the current status of flights in Spanish airports. It will use data from `aena.es` to scrape real time information on flights in the 2 hours prior and 12 hours ahead. AENA has information on 48 Spanish airports and heliports. You can return the status of each individual airport, or return the results for only the busiest airports. 
 
+## SPECIFY WHICH AIRPORT YOU WANT
+
+In the github repos, you will find a table that has been generated from a separate code search page. This joins AENA and wikipedia data to allow you to find the Airport code you want. Search here and enter the 3 digit IATA code below as a character in the airport_code variable before running more code. E.g. `airport_code <- "MAD"` would be used for Madrid-Adolfo Suarez. 
+
+We use this as the default search since we live here and are most interested.
+
+```{r}
+airport_code <- ""
+
+#create default search as MAD - Madrid, if no airport is selected. 
+airport_code <- ifelse(airport_code == "", "MAD", airport_code)
+```
+
+
 ## Functions to call
 
 `check_airport_status()` will return information on a specific airport that you call. This is done by using an 
@@ -22,6 +36,48 @@ Smaller airports can be called specifically in our call_specific_airport() funct
 *if you want to loop over all airports*
 You could reutilise this code and change the minimum number of flights needed for an airport to be included in this second function. The reason we have limited the code is because of lack of comparability between airports.  code can loop over all airports in Spain or call one individual airport. 
 
+#### Set your user-agent
+(check your user agent [here](https://www.google.com/search?client=ubuntu&channel=fs&q=what%27s+my+user+agent&ie=utf-8&oe=utf-8))
+
+We set this for ethical scraping, so that the page can recognise us as the ones downloading the data.
+
+```{r, eval=FALSE}
+# set_config(
+#   user_agent("Mozilla/5.0 ....)
+# )
+```
+
+
+### 1. Connect to Docker
+
+Ensure Docker is downloaded and running on your device.
+
+1️⃣ Docker command (image & ports) in PowerShell to start Selenium container
+
+Selenium container with visible Firefox:
+
+-   Optional =\> Install a VNC Viewer to see the browser:
+    -   Connect to: localhost:5900
+    -   No password required
+
+```         
+docker run -d -p 4445:4444 -p 5900:5900 --env VNC_NO_PASSWORD=1 --name selenium_firefox selenium/standalone-firefox-debug
+```
+
+Connection code:
+
+```{r}
+remDr <- remoteDriver(
+  remoteServerAddr = "localhost",
+  port = 4445L,
+  browserName = "firefox"
+)
+
+remDr$open()
+Sys.sleep(3) # pause for Docker to setup and run
+```
+
+We should now be connected to the remote Docker computer
 
 ## Load packages
 
@@ -34,148 +90,54 @@ library(httr)
 
 ```
 
+## RSelenium scraping of AENA searchbar
 
-
-# -------------------------------------------------------
-# DON'T START HERE YET -> TESTING WITH DOCKER, GO DOWN
-# -------------------------------------------------------
-
-To be reviewed later. Have focussed on the RSelenium application for now. 
-
-Connect to the running server:
-
-```{r}
-# remDr <- remoteDriver(
-#   remoteServerAddr = "localhost",
-#   port = 4447L,
-#   browserName = "firefox"
-# )
-
-```
-
-Connect to the server: 
-
-```{r}
-# remDr$open()
-
-```
-Check status of Selenium Server. This version is build in 2016 on Linux
-```{r}
-# remDr$getStatus()
-```
-
-Test connection to browser:
-```{r}
-# remDr$navigate("http://www.google.com/ncr")
-# 
-# remDr$getCurrentUrl()
-
-```
-
-*Example 1/*
-Info from 2024 project on how they used Selenium
-
-## Start selenium
-
-Now we are ready to start RSelenium, although beforehand it is necessary to install Mozzilla Firefox (as it is the browser this scraper will use) and follow a tutorial to install Java and Selenium on your computer.
-
-Then, once that´s done, we can run this code:
-
-```{r, eval=FALSE}
-# Start the Selenium server with a different port
-# remDr <- rsDriver(port = 4586L, browser = "firefox")
-```
-
-Remember to change the number of the port every time you initialize RSelenium. And also note:
-
-**BEWARE**: [At this point adjust the page that has just been opened (Firefox) to be as long as it can be in your screen]{.underline}
-
-#### Set your user-agent (check yours [here](https://www.google.com/search?client=ubuntu&channel=fs&q=what%27s+my+user+agent&ie=utf-8&oe=utf-8))
-
-Now, just in case we can set our user-agent so that the page recognises us as the ones downloading the data
-
-```{r, eval=FALSE}
-# set_config(
-#   user_agent("Mozilla/5.0 ....)
-# )
-```
-
-
-#------------------------------------------------------ ##
-#               START FROM HERE                         ##
-#                                                       ##
-##      Trying to connect Selenium to Aena              ##
-#                                                       ##
-# ------------------------------------------------------
-
-First driver object.
-
-I have downloaded firefox for this because it's supposed to be easier. If using chrome, you need to specify the exact verison you are using. 
-
-```{r}
-rs_driver_object <- rsDriver(browser = "firefox")
-```
-
-Access the client object
-
-```{r}
-remDr <- rs_driver_object$client
-```
-
-## Start the browser
-
-```{r}
-remDr$open()
-```
-
-## connect to aena page
+#### Launch AENA flight info page. 
 
 ```{r}
 remDr$navigate("https://www.aena.es/en/flight-info.html")
 ```
 
-## Click on the consent button
-... well, reject cookies. 
+#### Click on the consent button
+
+...well, we have selected reject cookies. 
+
 ```{r}
+# select path and click
+
 remDr$findElement(using = "xpath", "//div[@id = 'modal_footer']//button[@class='ecix-bold ecix-font-1-2em elix-accordion-btn-light elix-deny-all-btn']")$clickElement()
 
 ```
 
-## Switch the arrivals and departures button
+####Switch the arrivals and departures button
 
-Need to do this as default is only search in arrivals
-
-#### FOR FUTURE: but ideally we should do dynamic code to detect if it's in the departures or arrivals page 
+The default is to search in the arrivals page. We want to search airport by departures.
 
 ```{r}
+# navigate and click change search button
 remDr$findElement(using = "xpath", 
                   value = "//nav[@class='filtrovuelo in-page bg-primary']//div[@class='iconos']")$clickElement()
 
 ```
 
-### click on departures button to search for airport
+#### Click departures button
 
-This just selects the box to input text. 
+This just selects the box and allows us to input text to search:  
 
 ```{r}
-# remDr$findElement(using = "xpath", 
-#                   value = "//nav[@class='filtrovuelo in-page bg-primary']//div[@id='otherAirport']/input[@id='Departuresin the Aena network:']")$clickElement()
-
 # identify the departures box
 departures_box_select <- remDr$findElement(using = "xpath", 
                                            value = "//nav[@class='filtrovuelo in-page bg-primary']//input[@id='Departuresin the Aena network:']")
 
-# checking step ->  view the element in the current departures box
+# checking step ->  view the element in the current departures box placeholder and value.
 departures_box_select$getElementAttribute("placeholder")
+departures_box_select$getElementAttribute("value")
 
 ```
 
-Input the text to the Departures
+### Input the airport code to search 
 
-To set airport of interest. 
-Maybe for later, maybe make a table for valid airports and their codes? Create a lookup table to see what the airport code is. 
-
-Suggesting that we enter by airport code because then if gives the best response. 
+To set airport of interest then choose from our dropdown menu. Airport code is used because it gives the most accurate response. 
 
 ```{r}
 # Select airport code (MAD = Adolofo Suárez Madrid) to enter the text to departures 
@@ -184,11 +146,14 @@ airport_code <- "MAD"
 # send the airport code text to the departures box: 
 #first, clear the box from any exisitng text (sometimes cookies retain names)
 departures_box_select$clearElement()
+
 #next enter the airport code
 departures_box_select$sendKeysToElement(list(airport_code, key = "enter"))
 ```
 
-The autodropdown now appears with aiports based on the search term. 
+The auto dropdown now appears with airports based on the search term. 
+
+This step is just for those using a VNC viewer going step by step. You should see the dropdown values highlighted. 
 
 ```{r}
 # testing step ->  highlight the autofill to see it's being used: 
@@ -196,9 +161,9 @@ remDr$findElement(using = "xpath",
                   value = "//div[@class='input aeropuertoAena autocompletable']//ul[@class='autoCompletable visible']")$highlightElement()
 ```
 
-Select the dropdown option (this selects automatic based on the airport code)
+Select the dropdown option
 
-Now we want to select the valid dropdown option. I have created this dynamically because sometimes multiple airports can appear when you search just the 3 letter airport code. Using the airport code only will ensure we click the exact airport we want.
+This selects automatic based on the airport code. I have created this dynamically because sometimes multiple airports can appear when you search just the 3 letter airport code. Using the airport code only will ensure we click the exact airport we want. 
 
 ```{r}
 # Find the node from the dropdown with our airport code, create dynamic xml link using sprintf()
@@ -210,20 +175,14 @@ autofill_drop$clickElement()
 
 ```
 
-Backup manual select option
-```{r}
-# #confirming this works with one airport - YES, works with both calls
-# autofill_drop <- remDr$findElement(using = "xpath", value = "//span[. = 'MAD']")
-# #select it to update airport
-# autofill_drop$clickElement()
-```
-
-
 At this stage -> it should be a page that has filtered to your airport selected
 
-## Limit the search to only the next 6 hours: 
+#### Adjust time of search to next 12 hours
 
-Will need to be a function based on whether it's 
+The timer defaults to around 2 hours before the current time on AENA. We read this information dynamically and set the +12 hour timer based on the start time.
+
+First, we click the time box to enable the dropdown dynamic start time and end time information. 
+
 ```{r}
 
 select_timebox <- remDr$findElement(using = "xpath", 
@@ -236,7 +195,7 @@ select_timebox$clickElement()
 
 ### Impute start and end time of data collection
 
-Now check we should have the time drop down to start and end
+Now check we extract our start hour and start minute of the search. These are used to define our end values. 
 
 ```{r}
 # extract the time from the dropdown
@@ -250,16 +209,15 @@ start_min <- remDr$findElement(using = "xpath",
 start_hr <- as.numeric(start_hr$getElementText())
 start_min <- as.numeric(start_min$getElementText())
 
-paste0("Our start time is ", start_hr, ":", start_min, " (24 clock used time). By default, this is about 2 hours from before the current time.")
+paste0("Our start time is ", start_hr, ":", start_min, " (24 clock used time). By default, this is usually between 2 and 4 hours from before the current time.")
 
 ```
 
 
-Manually create the end time. 
+Now we determine what our end time will be, 12 hours in advance. 
 
-This will need to be a loop if the hour of the day is after 19 (as it will enter the next day) and then we will need to code the date selection variable too. 
+This will need to be a loop if the hour of the day is after 19 (as it will enter the next day) and then we will need to code the date selection variable too. As the inputs are characters. We calculate as numeric to determine end time.
 
-As the inputs are characters, calculate the number then force to be character
 ```{r}
 # create 12 hour ID to limit our search
 end_hr_input <- case_when(start_hr<12 ~ start_hr+12, # for next 12 hrs if morning
@@ -273,7 +231,7 @@ paste0("Our end time will be ", end_hr_input, ":", end_min_input, " (24 clock us
 ```
 
 Input the end times to the drop down for the "to" column
-End unit uses the same xml but has "hasta" instead of "desde" in the a higher level node. 
+The end unit uses the same xml but has "hasta" instead of "desde" in the a higher level node. We extract these nodes here:
 
 ```{r}
 # select the end time options
@@ -286,8 +244,18 @@ end_min <- remDr$findElement(using = "xpath",
 
 ```
 
+And now we dynamically input our end times. 
 
-Dynamically select updated hour slot
+Both the hour and minute slot require dynamic regex inputs as they both require 2 digit numeric values to input.
+
+- If the hour time is below 10, we add an extra '0' to the search term. E.g. 7 becomes 07
+- Similarly for the minutes slot, if the value is 0, we add a second zero (only options here are 0,15,30,45)
+
+Input the end hour time 
+- create dropdown within dynamic table 
+- search for the correct time value dynamically in the dropdown
+- click that exact node we find. 
+
 ```{r}
 #select the hour button to launch hours dropdown
 end_hr$clickElement()
@@ -306,6 +274,8 @@ element_hour$clickElement()
 ```
 
 Then dynamically select the minute slot:
+
+This follows the same process as the end hour above. 
 
 ```{r}
 #select the dropdown
@@ -335,11 +305,12 @@ select_ok <- remDr$findElement(using = "xpath",
 select_ok$clickElement()
 ```
 
-#select Date elements and update
+#### Update calendar elements for date of search
 
-We need to make this code defensible for when: 
-a) it is after midday (so the 12 hour flight search ends the following calendar day)
-b) it is the last day of the month and after midday (so the 12 hour flight search ends on the first day of the next calendar month)
+Some dyanmic coding here is to enable a more defensible script again.
+
+a) if the scraper is called in the morning, it will end on the same day.
+b) it is after midday, the 12 hour search will end the following day. So the calendar selection must adjust accordingly.
 
 First, we set our starting dates. This tracker is for current status, so it will always be today
 
@@ -351,85 +322,55 @@ select_date_box$highlightElement()
 select_date_box$clickElement()
 ```
 
-Try to input the dates manually
-```{r}
-date_today <- Sys.Date() # in format yyyy-mm-dd
-day_of_month <- as.numeric(day(date_today))
-
-paste0("Start day is day ", day_of_month, " of the month")
-
-
-format_date_lub <- function(date_input) {
-  # Get named day of the week and month
-  day_of_week <- wday(date_input, label = TRUE, abbr = FALSE)
-  month <- month(date_input, label = TRUE, abbr = FALSE)
-
-  # Get the day with ordinal suffix
-  day <- day(date_input)
-  suffix <- str_sub(format(date_input, "%ord"), 2, 3)
-  day_with_suffix <- paste0(day, suffix)
-
-  # Get the year
-  year <- year(date_input)
-
-  # Combine the parts
-  formatted_date <- paste(day_of_week, month, day_with_suffix, year)
-
-  return(formatted_date)
-}
-
-lubridate::mdy(date_today)
-date_string <- format(date_today, "%m-%d-%Y")
-lubridate::mdy(date_string)
-format_date_lub(date_string)
-  
-```
-
-
-Function to check if it's the last day of the month. 
-
-```{r}
-is_last_day_of_month <- function(date = Sys.Date()) {
-  current_date <- as.Date(date)
-  first_day_next_month <- seq(as.Date(format(current_date, "%Y-%m-01")), by = "1 month", length.out = 2)[2]
-  tomorrow <- current_date + 1
-  return(tomorrow == first_day_next_month)
-}
-
-is_last_day_of_month()
-```
 
 Manual coding then will function:
 a) base case: if day is non-last of month and it is before midday. Select the same day.
+b) afternoon run: the end calendar day will be sometime the following morning and we need to factor this in.
 
 ```{r}
-# set the start date
-xpath_startcal_expression <- sprintf("//div[contains(@class, 'react-datepicker__day react-datepicker__day--') and text()='%0d']", as.numeric(day_of_month))
+# set our date value for today
+date_today <- Sys.Date() # in format yyyy-mm-dd
+day_of_month <- as.numeric(day(date_today))
 
-# set the expression for tomorrow to use if you run in the afternoon.
-xpath_endcal_expression <- sprintf("//div[contains(@class, 'react-datepicker__day react-datepicker__day--') and text()='%0d']", as.numeric(day_of_month+1))
+# set the xml paths to the numbered notes with regex, based on the day.
+xpath_startcal_expression <- ifelse(as.numeric(day_of_month)<10, 
+                                    # add leading zero to node name if <10
+                                    sprintf("//div[contains(@class, 'react-datepicker__day react-datepicker__day--') and text()='%0d']", as.numeric(day_of_month)),
+                                    # no leading zero if node 10+
+                                    sprintf("//div[contains(@class, 'react-datepicker__day react-datepicker__day--') and text()='%d']", as.numeric(day_of_month)))
 
+# set the expression for tomorrow to use if you run in the afternoon. This adds 1 day, so will only add zero if the day is 8 or earlier (on the 9th of the month the end date will be 10 from this call)
+xpath_endcal_expression <- ifelse(as.numeric(day_of_month)+1<10, 
+                                  sprintf("//div[contains(@class, 'react-datepicker__day react-datepicker__day--') and text()='%0d']", as.numeric(day_of_month+1)),
+                                  sprintf("//div[contains(@class, 'react-datepicker__day react-datepicker__day--') and text()='%d']", as.numeric(day_of_month+1)))
+
+
+# now we assign a value to each of these calendar input xml nodes 
 cal_today_date <- remDr$findElement(using = "xpath", value = xpath_startcal_expression)
 cal_tomorrow_date <- remDr$findElement(using = "xpath", value = xpath_endcal_expression)
 
-find_cal_date$highlightElement()
 ```
 
-Now run function to click either today or tomorrow based on when the 12 hour period ends:
+Select either today or tomorrow based on the time of day. The default start date is the current date, so our selection automatically selects the end date. 
+
+The calendar popout closes automatically after a click so we do not manually close. 
 
 ```{r}
 
-if (start_hr < 12 && !is_last_day_of_month(Sys.Date())) {
+if (start_hr < 12) {
   cal_today_date$clickElement()
 } else {
   cal_tomorrow_date$clickElement()
 }
-
 ```
 
-# press search to confirm all our options are input
+Known error in the calendar search:
 
-This updates the pages total number of flights upcoming. 
+LAST DAY OF THE MONTH: If it is the last day of the month and after midday (so the 12 hour flight search ends on the first day of the next calendar month), there may be an error. I have tried to select the dates dynamically, but the only full date input is in long format e.g. "Monday, 21st of August, 2018" and R could not match this effectively with lubridate. So it was more robust to search by dynamically inputting the day of the month value and searching for that node. 
+
+#### Press search to confirm our search options are input
+
+This will also update the pages total number of flights upcoming. 
 
 ```{r}
 search_button <- remDr$findElement(using = "xpath",
@@ -439,6 +380,8 @@ search_button$clickElement()
 
 ```
 
+
+#### Determine our active flight information
 Read how many flights are upcoming:
 
 ```{r}
@@ -490,110 +433,16 @@ Now we run this click more to expand our page to view all flights
 multi_click_viewmore(num_clicks = num_clicks)
 ```
 
+#### Now we extract our page html file for analysis.
 
-### Count our upcoming flights and click down 
-
-Ensure we put sleeps in our page extension. 
-
-1/ get our number of flights
 ```{r}
+# 1. Get the page source (updated HTML)
+aena_page_source <- remDr$getPageSource()[[1]]
+
+# 2. Parse the HTML using rvest
+aena_flight_information <- read_html(aena_page_source)
 
 ```
 
+We now have our html script parsed into the R local program. 
 
-
-
-
-
-
-
-PROBABLY DEAD? 
-
-```{r}
-
-# CREATE LOOP FOR FOR TODAY OR TOMORROW AS END DAY
-target_value <- n + 1
-
-# Construct dynamic XPath using sprintf()
-xpath_target <- sprintf("//div[contains(@class, 'react-datepicker__day') and text()='%d']", target_day)
-
-# the xpath can be manually created, because each day has it's own node with the day after the 'react-datepicker__day' class
-
-sprintf("//div")
-sprintf("//div[@class='valor minuto']//ul[@tabindex='4']/li[text()='%d']", as.numeric(end_min_input))
-
-
-# Find the element
-element_target <- remDr$findElement(using = "xpath", value = xpath_target)
-
-# Click the element (or perform other actions)
-element_target$clickElement()
-
-```
-
-
-```{r}
-# Get the value attribute
-date_range_string <- select_date_box$getElementAttribute("strong")[1]
-
-# Split the string by " - "
-date_codes <- unlist(strsplit(date_range_string, " - "))
-
-```
-
-1/ If it is before midday, we want to select the same start and end date for our 12 hour block of flights
-
-```{r}
-Sys.Date()
-# Select the 18th of March 2025
-day <- 18
-xpath_day <- sprintf("//div[contains(@class, 'react-datepicker__month-container')]//div[contains(@class, 'react-datepicker__day') and text()='%d']", day)
-
-element_day <- remDr$findElement(using = "xpath", value = xpath_day)
-element_day$clickElement()
-```
-
-
-NEXT PROPOSED STEP FOR TIME LIMIT:
-- use clickelement to select the dropdown for the hour column,
-- use some str_detect function to detect the option within that next dropdown node which matches the target end time.
-- click element on that 
-
-
-
-
-
-
-
-
-
-
-
-`````````````````````````````````````````````````````````
-`````````````````````````````````````````````````````````
-                      CODE GRAVEYARD
-        Think it's broken but not deleting yet in case 
-`````````````````````````````````````````````````````````
-`````````````````````````````````````````````````````````
-
-Try to send the end time: 
-THIS ALSO DOESN'T WORK
-
-
-Function to loop through dropdown times and select matching. 
-We can use this for both the minute and hour dropdown (it will be called on different child nodes. )
-
-```{r}
-
-find_search_time <- function(time_dropdown_node, target_time) {
-  # loop through the time nodes (24 for hours)
-  for (element in time_dropdown_node) {
-    element_text <- element$getElementText()[[1]]
-    if (element_text == as.character(target_time)) {
-      return(element) # Return the matching element
-    }
-  }
-  return(NULL) # Return NULL if no match is found
-}
-
-```
